Import of RCLAMP/Mail-Thread-Arc-0.21 from CPAN.
gitpan-cpan-distribution: Mail-Thread-Arc
gitpan-cpan-version:      0.21
gitpan-cpan-path:         RCLAMP/Mail-Thread-Arc-0.21.tar.gz
gitpan-cpan-author:       RCLAMP
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-README for Mail::Thread::Arc 0.2
+README for Mail::Thread::Arc 0.21
 
 =head1 NAME
 
@@ -25,7 +25,7 @@ This module has external dependencies on the following modules:
 
  Class::Accessor::Chained
  Date::Parse
- Mail::Thread	2.4
+ Mail::Thread	2.41
  SVG
  Test::More
 
@@ -43,6 +43,14 @@ and if all goes well
 What changed over the last 3 revisions
 
 =over
+
+=item 0.21	Thursday, 11th December, 2003
+
+	Note in the deps that we need Mail::Thread 2.41 (I released a
+	broken thing as	Mail::Thread 2.4, for I am a fool)
+
+	Use the inherited ->new
+
 
 =item 0.20	Thursday, 11th December, 2003
 
